--- a/package.json
+++ b/package.json
@@ -15,11 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
-    "redux": "^4.1.0"
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
